# pet-care-os

./: .env.example  .gitignore  README.md  REQUIREMENTS.md  pyproject.toml
cron/: reorder_check.py
data/: assessments.csv
migrations/: 001_init.sql  002_seed.sql  003_samson_safe_and_allergens.sql  004_allergen_category.sql  005_samson_allergy_panel.sql  006_do_not_buy.sql  007_ingest_food_sheets.sql  008_brand_rotation_foods.sql
petcareos/: __init__.py  allergens.py  catalog.py  cli.py  config.py  db.py  migrate.py  pets.py  preferences.py  ticktick.py
tests/: test_capture.py  test_reorder_gates.py
