[project]
name = "petcareos"
version = "0.1.0"
description = "Pet Care OS — External Brain OS module for cat food catalog, preferences, and reorder safety."
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.1",
]

[project.scripts]
petcareos = "petcareos.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["petcareos"]
